parser.output
Grammar

    0 $accept: CompUnit "文件结尾"

    1 CompUnit: CompUnitList

    2 CompUnitList: %empty
    3             | CompUnitList Decl
    4             | CompUnitList FuncDef

    5 ArrayDimList: %empty
    6             | ArrayDimSubList
    7             | "左中括号" "右中括号" ArrayDimSubList

    8 ArrayDimSubList: "左中括号" Exp "右中括号"
    9                | ArrayDimSubList "左中括号" Exp "右中括号"

   10 BType: "int关键字"
   11      | "void关键字"

   12 Decl: ValueDecl

   13 ValueDecl: "const关键字" BType ValueDefList "分号"
   14          | BType ValueDefList "分号"

   15 ValueDefList: ValueDef
   16             | ValueDefList "逗号" ValueDef

   17 ValueDef: Ident ArrayDimList
   18         | Ident ArrayDimList "等号" Exp
   19         | Ident ArrayDimList "等号" ArrayAssignList

   20 ArrayAssignList: "左大括号" "右大括号"
   21                | "左大括号" ArrayAssignSubList "右大括号"

   22 ArrayAssignSubList: Exp
   23                   | ArrayAssignSubList "逗号" Exp
   24                   | ArrayAssignSubList "逗号" ArrayAssignList

   25 FuncDef: BType Ident "左小括号" "右小括号" Block
   26        | BType Ident "左小括号" FuncParamDeclList "右小括号" Block

   27 FuncParamDeclList: FuncParamDecl
   28                  | FuncParamDeclList "逗号" FuncParamDecl

   29 FuncParamDecl: BType Ident

   30 Block: "左大括号" "右大括号"
   31      | "左大括号" BlockItemList "右大括号"

   32 BlockItemList: Decl
   33              | Stmt
   34              | BlockItemList Decl
   35              | BlockItemList Stmt

   36 Stmt: Ident "等号" Exp "分号"
   37     | "分号"
   38     | Exp "分号"
   39     | Block
   40     | "if关键字" "左小括号" Exp "右小括号" Stmt
   41     | "if关键字" "左小括号" Exp "右小括号" Stmt "else关键字" Stmt
   42     | "while关键字" "左小括号" Exp "右小括号" Stmt
   43     | "break关键字" "分号"
   44     | "continue关键字" "分号"
   45     | "return关键字" Exp "分号"
   46     | "return关键字" "分号"

   47 Ident: "标识符"

   48 Number: "十进制常数"
   49       | "八进制常数"
   50       | "十六进制常数"

   51 FuncallParamList: Exp
   52                 | FuncallParamList "逗号" Exp

   53 Exp: Exp "乘号" Exp
   54    | Exp "除号" Exp
   55    | Exp "余号" Exp
   56    | Exp "加号" Exp
   57    | Exp "减号" Exp
   58    | Exp "小于号" Exp
   59    | Exp "大于号" Exp
   60    | Exp "小于等于号" Exp
   61    | Exp "大于等于号" Exp
   62    | Exp "等于等于号" Exp
   63    | Exp "不等于号" Exp
   64    | Exp "与号" Exp
   65    | Exp "或号" Exp
   66    | "左小括号" Exp "右小括号"
   67    | Ident
   68    | Number
   69    | Ident "左小括号" "右小括号"
   70    | Ident "左小括号" FuncallParamList "右小括号"
   71    | "加号" Exp
   72    | "减号" Exp
   73    | "感叹号" Exp


Terminals, with rules where they appear

    "文件结尾" (0) 0
    error (256)
    "逗号" (258) 16 23 24 28 52
    "分号" (259) 13 14 36 37 38 43 44 45 46
    "左大括号" (260) 20 21 30 31
    "右大括号" (261) 20 21 30 31
    "左中括号" (262) 7 8 9
    "右中括号" (263) 7 8 9
    "左小括号" (264) 25 26 40 41 42 66 69 70
    "右小括号" (265) 25 26 40 41 42 66 69 70
    "等号" (266) 18 19 36
    "const关键字" <string> (267) 13
    "int关键字" <string> (268) 10
    "void关键字" <string> (269) 11
    "if关键字" <string> (270) 40 41
    "else关键字" <string> (271) 41
    "while关键字" <string> (272) 42
    "break关键字" <string> (273) 43
    "continue关键字" <string> (274) 44
    "return关键字" <string> (275) 45 46
    "加号" (276) 56 71
    "减号" (277) 57 72
    "乘号" (278) 53
    "除号" (279) 54
    "余号" (280) 55
    "感叹号" (281) 73
    "小于号" (282) 58
    "大于号" (283) 59
    "小于等于号" (284) 60
    "大于等于号" (285) 61
    "等于等于号" (286) 62
    "不等于号" (287) 63
    "与号" (288) 64
    "或号" (289) 65
    "标识符" <string> (290) 47
    "十进制常数" <int> (291) 48
    "八进制常数" <int> (292) 49
    "十六进制常数" <int> (293) 50
    T_LOWER_THEN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    CompUnit < CompUnit* > (41)
        on left: 1
        on right: 0
    CompUnitList < vector<ASTUnit*> > (42)
        on left: 2 3 4
        on right: 1 3 4
    ArrayDimList < vector<Exp*> > (43)
        on left: 5 6 7
        on right: 17 18 19
    ArrayDimSubList < vector<Exp*> > (44)
        on left: 8 9
        on right: 6 7 9
    BType < Type* > (45)
        on left: 10 11
        on right: 13 14 25 26 29
    Decl < Decl* > (46)
        on left: 12
        on right: 3 32 34
    ValueDecl < ValueDecl* > (47)
        on left: 13 14
        on right: 12
    ValueDefList < vector<ValueDef*> > (48)
        on left: 15 16
        on right: 13 14 16
    ValueDef < ValueDef* > (49)
        on left: 17 18 19
        on right: 15 16
    ArrayAssignList (50)
        on left: 20 21
        on right: 19 24
    ArrayAssignSubList (51)
        on left: 22 23 24
        on right: 21 23 24
    FuncDef < FuncDef* > (52)
        on left: 25 26
        on right: 4
    FuncParamDeclList < vector<FuncParamDecl*> > (53)
        on left: 27 28
        on right: 26 28
    FuncParamDecl < FuncParamDecl* > (54)
        on left: 29
        on right: 27 28
    Block < BlockStmt* > (55)
        on left: 30 31
        on right: 25 26 39
    BlockItemList < vector<ASTUnit*> > (56)
        on left: 32 33 34 35
        on right: 31 34 35
    Stmt < Stmt* > (57)
        on left: 36 37 38 39 40 41 42 43 44 45 46
        on right: 33 35 40 41 42
    Ident < Ident* > (58)
        on left: 47
        on right: 17 18 19 25 26 29 36 67 69 70
    Number < ConstantInt* > (59)
        on left: 48 49 50
        on right: 68
    FuncallParamList < vector<Exp*> > (60)
        on left: 51 52
        on right: 52 70
    Exp < Exp* > (61)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 8 9 18 22 23 36 38 40 41 42 45 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 71 72 73


State 0

    0 $accept: . CompUnit "文件结尾"

    $default  reduce using rule 2 (CompUnitList)

    CompUnit      go to state 1
    CompUnitList  go to state 2


State 1

    0 $accept: CompUnit . "文件结尾"

    "文件结尾"  shift, and go to state 3


State 2

    1 CompUnit: CompUnitList .
    3 CompUnitList: CompUnitList . Decl
    4             | CompUnitList . FuncDef

    "const关键字"  shift, and go to state 4
    "int关键字"    shift, and go to state 5
    "void关键字"   shift, and go to state 6

    $default  reduce using rule 1 (CompUnit)

    BType      go to state 7
    Decl       go to state 8
    ValueDecl  go to state 9
    FuncDef    go to state 10


State 3

    0 $accept: CompUnit "文件结尾" .

    $default  accept


State 4

   13 ValueDecl: "const关键字" . BType ValueDefList "分号"

    "int关键字"   shift, and go to state 5
    "void关键字"  shift, and go to state 6

    BType  go to state 11


State 5

   10 BType: "int关键字" .

    $default  reduce using rule 10 (BType)


State 6

   11 BType: "void关键字" .

    $default  reduce using rule 11 (BType)


State 7

   14 ValueDecl: BType . ValueDefList "分号"
   25 FuncDef: BType . Ident "左小括号" "右小括号" Block
   26        | BType . Ident "左小括号" FuncParamDeclList "右小括号" Block

    "标识符"  shift, and go to state 12

    ValueDefList  go to state 13
    ValueDef      go to state 14
    Ident         go to state 15


State 8

    3 CompUnitList: CompUnitList Decl .

    $default  reduce using rule 3 (CompUnitList)


State 9

   12 Decl: ValueDecl .

    $default  reduce using rule 12 (Decl)


State 10

    4 CompUnitList: CompUnitList FuncDef .

    $default  reduce using rule 4 (CompUnitList)


State 11

   13 ValueDecl: "const关键字" BType . ValueDefList "分号"

    "标识符"  shift, and go to state 12

    ValueDefList  go to state 16
    ValueDef      go to state 14
    Ident         go to state 17


State 12

   47 Ident: "标识符" .

    $default  reduce using rule 47 (Ident)


State 13

   14 ValueDecl: BType ValueDefList . "分号"
   16 ValueDefList: ValueDefList . "逗号" ValueDef

    "逗号"  shift, and go to state 18
    "分号"  shift, and go to state 19


State 14

   15 ValueDefList: ValueDef .

    $default  reduce using rule 15 (ValueDefList)


State 15

   17 ValueDef: Ident . ArrayDimList
   18         | Ident . ArrayDimList "等号" Exp
   19         | Ident . ArrayDimList "等号" ArrayAssignList
   25 FuncDef: BType Ident . "左小括号" "右小括号" Block
   26        | BType Ident . "左小括号" FuncParamDeclList "右小括号" Block

    "左中括号"  shift, and go to state 20
    "左小括号"  shift, and go to state 21

    $default  reduce using rule 5 (ArrayDimList)

    ArrayDimList     go to state 22
    ArrayDimSubList  go to state 23


State 16

   13 ValueDecl: "const关键字" BType ValueDefList . "分号"
   16 ValueDefList: ValueDefList . "逗号" ValueDef

    "逗号"  shift, and go to state 18
    "分号"  shift, and go to state 24


State 17

   17 ValueDef: Ident . ArrayDimList
   18         | Ident . ArrayDimList "等号" Exp
   19         | Ident . ArrayDimList "等号" ArrayAssignList

    "左中括号"  shift, and go to state 20

    $default  reduce using rule 5 (ArrayDimList)

    ArrayDimList     go to state 22
    ArrayDimSubList  go to state 23


State 18

   16 ValueDefList: ValueDefList "逗号" . ValueDef

    "标识符"  shift, and go to state 12

    ValueDef  go to state 25
    Ident     go to state 17


State 19

   14 ValueDecl: BType ValueDefList "分号" .

    $default  reduce using rule 14 (ValueDecl)


State 20

    7 ArrayDimList: "左中括号" . "右中括号" ArrayDimSubList
    8 ArrayDimSubList: "左中括号" . Exp "右中括号"

    "右中括号"        shift, and go to state 26
    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 36


State 21

   25 FuncDef: BType Ident "左小括号" . "右小括号" Block
   26        | BType Ident "左小括号" . FuncParamDeclList "右小括号" Block

    "右小括号"   shift, and go to state 37
    "int关键字"   shift, and go to state 5
    "void关键字"  shift, and go to state 6

    BType              go to state 38
    FuncParamDeclList  go to state 39
    FuncParamDecl      go to state 40


State 22

   17 ValueDef: Ident ArrayDimList .
   18         | Ident ArrayDimList . "等号" Exp
   19         | Ident ArrayDimList . "等号" ArrayAssignList

    "等号"  shift, and go to state 41

    $default  reduce using rule 17 (ValueDef)


State 23

    6 ArrayDimList: ArrayDimSubList .
    9 ArrayDimSubList: ArrayDimSubList . "左中括号" Exp "右中括号"

    "左中括号"  shift, and go to state 42

    $default  reduce using rule 6 (ArrayDimList)


State 24

   13 ValueDecl: "const关键字" BType ValueDefList "分号" .

    $default  reduce using rule 13 (ValueDecl)


State 25

   16 ValueDefList: ValueDefList "逗号" ValueDef .

    $default  reduce using rule 16 (ValueDefList)


State 26

    7 ArrayDimList: "左中括号" "右中括号" . ArrayDimSubList

    "左中括号"  shift, and go to state 43

    ArrayDimSubList  go to state 44


State 27

   66 Exp: "左小括号" . Exp "右小括号"

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 45


State 28

   71 Exp: "加号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 46


State 29

   72 Exp: "减号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 47


State 30

   73 Exp: "感叹号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 48


State 31

   48 Number: "十进制常数" .

    $default  reduce using rule 48 (Number)


State 32

   49 Number: "八进制常数" .

    $default  reduce using rule 49 (Number)


State 33

   50 Number: "十六进制常数" .

    $default  reduce using rule 50 (Number)


State 34

   67 Exp: Ident .
   69    | Ident . "左小括号" "右小括号"
   70    | Ident . "左小括号" FuncallParamList "右小括号"

    "左小括号"  shift, and go to state 49

    $default  reduce using rule 67 (Exp)


State 35

   68 Exp: Number .

    $default  reduce using rule 68 (Exp)


State 36

    8 ArrayDimSubList: "左中括号" Exp . "右中括号"
   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp

    "右中括号"     shift, and go to state 50
    "加号"           shift, and go to state 51
    "减号"           shift, and go to state 52
    "乘号"           shift, and go to state 53
    "除号"           shift, and go to state 54
    "余号"           shift, and go to state 55
    "小于号"        shift, and go to state 56
    "大于号"        shift, and go to state 57
    "小于等于号"  shift, and go to state 58
    "大于等于号"  shift, and go to state 59
    "等于等于号"  shift, and go to state 60
    "不等于号"     shift, and go to state 61
    "与号"           shift, and go to state 62
    "或号"           shift, and go to state 63


State 37

   25 FuncDef: BType Ident "左小括号" "右小括号" . Block

    "左大括号"  shift, and go to state 64

    Block  go to state 65


State 38

   29 FuncParamDecl: BType . Ident

    "标识符"  shift, and go to state 12

    Ident  go to state 66


State 39

   26 FuncDef: BType Ident "左小括号" FuncParamDeclList . "右小括号" Block
   28 FuncParamDeclList: FuncParamDeclList . "逗号" FuncParamDecl

    "逗号"        shift, and go to state 67
    "右小括号"  shift, and go to state 68


State 40

   27 FuncParamDeclList: FuncParamDecl .

    $default  reduce using rule 27 (FuncParamDeclList)


State 41

   18 ValueDef: Ident ArrayDimList "等号" . Exp
   19         | Ident ArrayDimList "等号" . ArrayAssignList

    "左大括号"        shift, and go to state 69
    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    ArrayAssignList  go to state 70
    Ident            go to state 34
    Number           go to state 35
    Exp              go to state 71


State 42

    9 ArrayDimSubList: ArrayDimSubList "左中括号" . Exp "右中括号"

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 72


State 43

    8 ArrayDimSubList: "左中括号" . Exp "右中括号"

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 36


State 44

    7 ArrayDimList: "左中括号" "右中括号" ArrayDimSubList .
    9 ArrayDimSubList: ArrayDimSubList . "左中括号" Exp "右中括号"

    "左中括号"  shift, and go to state 42

    $default  reduce using rule 7 (ArrayDimList)


State 45

   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp
   66    | "左小括号" Exp . "右小括号"

    "右小括号"     shift, and go to state 73
    "加号"           shift, and go to state 51
    "减号"           shift, and go to state 52
    "乘号"           shift, and go to state 53
    "除号"           shift, and go to state 54
    "余号"           shift, and go to state 55
    "小于号"        shift, and go to state 56
    "大于号"        shift, and go to state 57
    "小于等于号"  shift, and go to state 58
    "大于等于号"  shift, and go to state 59
    "等于等于号"  shift, and go to state 60
    "不等于号"     shift, and go to state 61
    "与号"           shift, and go to state 62
    "或号"           shift, and go to state 63


State 46

   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp
   71    | "加号" Exp .

    "乘号"  shift, and go to state 53
    "除号"  shift, and go to state 54
    "余号"  shift, and go to state 55

    $default  reduce using rule 71 (Exp)


State 47

   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp
   72    | "减号" Exp .

    "乘号"  shift, and go to state 53
    "除号"  shift, and go to state 54
    "余号"  shift, and go to state 55

    $default  reduce using rule 72 (Exp)


State 48

   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp
   73    | "感叹号" Exp .

    $default  reduce using rule 73 (Exp)


State 49

   69 Exp: Ident "左小括号" . "右小括号"
   70    | Ident "左小括号" . FuncallParamList "右小括号"

    "左小括号"        shift, and go to state 27
    "右小括号"        shift, and go to state 74
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident             go to state 34
    Number            go to state 35
    FuncallParamList  go to state 75
    Exp               go to state 76


State 50

    8 ArrayDimSubList: "左中括号" Exp "右中括号" .

    $default  reduce using rule 8 (ArrayDimSubList)


State 51

   56 Exp: Exp "加号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 77


State 52

   57 Exp: Exp "减号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 78


State 53

   53 Exp: Exp "乘号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 79


State 54

   54 Exp: Exp "除号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 80


State 55

   55 Exp: Exp "余号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 81


State 56

   58 Exp: Exp "小于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 82


State 57

   59 Exp: Exp "大于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 83


State 58

   60 Exp: Exp "小于等于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 84


State 59

   61 Exp: Exp "大于等于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 85


State 60

   62 Exp: Exp "等于等于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 86


State 61

   63 Exp: Exp "不等于号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 87


State 62

   64 Exp: Exp "与号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 88


State 63

   65 Exp: Exp "或号" . Exp

    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    Ident   go to state 34
    Number  go to state 35
    Exp     go to state 89


State 64

   30 Block: "左大括号" . "右大括号"
   31      | "左大括号" . BlockItemList "右大括号"

    "分号"              shift, and go to state 90
    "左大括号"        shift, and go to state 64
    "右大括号"        shift, and go to state 91
    "左小括号"        shift, and go to state 27
    "const关键字"      shift, and go to state 4
    "int关键字"        shift, and go to state 5
    "void关键字"       shift, and go to state 6
    "if关键字"         shift, and go to state 92
    "while关键字"      shift, and go to state 93
    "break关键字"      shift, and go to state 94
    "continue关键字"   shift, and go to state 95
    "return关键字"     shift, and go to state 96
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    BType          go to state 97
    Decl           go to state 98
    ValueDecl      go to state 9
    Block          go to state 99
    BlockItemList  go to state 100
    Stmt           go to state 101
    Ident          go to state 102
    Number         go to state 35
    Exp            go to state 103


State 65

   25 FuncDef: BType Ident "左小括号" "右小括号" Block .

    $default  reduce using rule 25 (FuncDef)


State 66

   29 FuncParamDecl: BType Ident .

    $default  reduce using rule 29 (FuncParamDecl)


State 67

   28 FuncParamDeclList: FuncParamDeclList "逗号" . FuncParamDecl

    "int关键字"   shift, and go to state 5
    "void关键字"  shift, and go to state 6

    BType          go to state 38
    FuncParamDecl  go to state 104


State 68

   26 FuncDef: BType Ident "左小括号" FuncParamDeclList "右小括号" . Block

    "左大括号"  shift, and go to state 64

    Block  go to state 105


State 69

   20 ArrayAssignList: "左大括号" . "右大括号"
   21                | "左大括号" . ArrayAssignSubList "右大括号"

    "右大括号"        shift, and go to state 106
    "左小括号"        shift, and go to state 27
    "加号"              shift, and go to state 28
    "减号"              shift, and go to state 29
    "感叹号"           shift, and go to state 30
    "标识符"           shift, and go to state 12
    "十进制常数"     shift, and go to state 31
    "八进制常数"     shift, and go to state 32
    "十六进制常数"  shift, and go to state 33

    ArrayAssignSubList  go to state 107
    Ident               go to state 34
    Number              go to state 35
    Exp                 go to state 108


State 70

   19 ValueDef: Ident ArrayDimList "等号" ArrayAssignList .

    $default  reduce using rule 19 (ValueDef)


State 71

   18 ValueDef: Ident ArrayDimList "等号" Exp .
   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp

    "加号"           shift, and go to state 51
    "减号"           shift, and go to state 52
    "乘号"           shift, and go to state 53
    "除号"           shift, and go to state 54
    "余号"           shift, and go to state 55
    "小于号"        shift, and go to state 56
    "大于号"        shift, and go to state 57
    "小于等于号"  shift, and go to state 58
    "大于等于号"  shift, and go to state 59
    "等于等于号"  shift, and go to state 60
    "不等于号"     shift, and go to state 61
    "与号"           shift, and go to state 62
    "或号"           shift, and go to state 63

    $default  reduce using rule 18 (ValueDef)


State 72

    9 ArrayDimSubList: ArrayDimSubList "左中括号" Exp . "右中括号"
   53 Exp: Exp . "乘号" Exp
   54    | Exp . "除号" Exp
   55    | Exp . "余号" Exp
   56    | Exp . "加号" Exp
   57    | Exp . "减号" Exp
   58    | Exp . "小于号" Exp
   59    | Exp . "大于号" Exp
   60    | Exp . "小于等于号" Exp
   61    | Exp . "大于等于号" Exp
   62    | Exp . "等于等于号" Exp
   63    | Exp . "不等于号" Exp
   64    | Exp . "与号" Exp
   65    | Exp . "或号" Exp
